--- a/notebooks/robot_inference.ipynb
+++ b/notebooks/robot_inference.ipynb
@@ -247,7 +247,7 @@
     "    # Read the follower state and access the frames from the cameras\n",
     "    observation = robot.capture_observation()\n",
     "    observation[\"task\"] = single_task\n",
-    "    observation[\"observation.state\"] = torch.cat([observation[\"observation.state\"], norm_pick_t])\n",
+    "    observation[\"observation.state\"] = torch.cat([observation[\"observation.state\"], norm_pick_t, norm_place_t])\n",
     "    # Convert to pytorch format: channel first and float32 in [0,1]\n",
     "    # with batch dimension\n",
     "    for name in observation:\n",
